--- a/Noties/Noties/Info.plist
+++ b/Noties/Noties/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Noties app requiers permission to access your location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Noties app requiers permission to access your location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Noties app requiers permission to access your location</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Noties app requires permission to access your photos</string>
 	<key>UIApplicationSceneManifest</key>
